# ChangeLog for vmware overlay
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $ Id: $

  20 Aug 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild:
  Finally get the open-vm-tools unity dependencies right.

  20 Aug 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild:
  Fix up the unity USE flag in open-vm-tools.

  20 Aug 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/open-vm-tools/files/10-vmware-tools:
  Bump open-vm-tools and add patch from Mrness for autostarting vmware-user.

  19 Aug 2008; Mike Auty <ikelos@gentoo.org>
  -app-emulation/vmware-server/vmware-server-2.0.0.101586.ebuild:
  Remove the broken vmware-server ebuild.

  19 Aug 2008; Mike Auty <ikelos@gentoo.org>
  app-emulation/vmware-modules/vmware-modules-1.0.0.20.ebuild:
  Clean up UNUSED_SYMBOLS check. Also forgot to thank Jeff Mitchell for his
  patches in the last update. Thanks Jeff!

  19 Aug 2008; Mike Auty <ikelos@gentoo.org>
  +app-emulation/vmware-workstation/files/6.5.0.99530/000_all_initd-location
  .patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/001_all_fix-permission
  s.patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/002_all_pagebreak-dete
  ction-fix.patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/004_all_do-not-build-m
  odules.patch,
  +app-emulation/vmware-modules/files/1.0.0.20-vmblock-2.6.26-1.patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/007_all_use-modprobe-o
  ver-insmod.patch,
  +app-emulation/vmware-modules/files/1.0.0.20-vmblock-2.6.26-2.patch,
  +app-emulation/vmware-modules/files/1.0.0.21-makefile-kernel-dir.patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/009_all_init.d-modules
  -warning.patch,
  +app-emulation/vmware-workstation/files/6.5.0.99530/011_all_legit-modules-
  only.patch,
  +app-emulation/vmware-modules/files/1.0.0.20-vmnet-2.6.26.patch,