@@ -13,4 +13,4 @@ DIST open-vm-tools-2008.08.08-109361.tar.gz 2971141 RMD160 4ea0a6aa2edda2bc404c8
 EBUILD open-vm-tools-0.0.20080414.87182.ebuild 3683 RMD160 1ed0a118495b177076ac4585c512770047ccc02b SHA1 49b56355f9b39f5f2c71fac0a7e723dbaaa63836 SHA256 6ddba316a27d4aac5390b983e0ab905a80727c92a8b0c82e42f68a367b9a525c
 EBUILD open-vm-tools-0.0.20080515.93241.ebuild 3638 RMD160 70ab5b74e1c4452cdc6cc2bfaa61fa8048cc5309 SHA1 d95a10736c41eaf1970b50059f756bbff4506868 SHA256 9fcd8f3c40f8bd8cdb04fed77626b4a485ffc8680b876bfd5734c2a898393697
 EBUILD open-vm-tools-0.0.20080701.102166.ebuild 2701 RMD160 5bc76a6525535758de70ec1fbb57add017e7b1fa SHA1 6bb9d0bc96ed8b1fb9fafe3f8bca9b6cf736617a SHA256 e6dee5b5e4c2cf9aa8f0968b44e5f49acf96c813c65ed7e4bd7706e4f93dc1d8
-EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2864 RMD160 3f7e0b0418f3b50b0062a4f7420248c2641d50ae SHA1 d0e2389c5f8aea9206304af22a9c0d8febd1ec58 SHA256 2c8a54fa2f320a92b422874b6b10b24cf51fa2439daea5b672ab58c927d12ffa
+EBUILD open-vm-tools-0.0.20080808.109361.ebuild 2866 RMD160 14066d8b183395e13570a20a202fdb929e26b89b SHA1 ace8141c47b138defee27f223b97ecba090128cd SHA256 6f67917b0ea8ec8f37003298247102dfbe63dbbeff1817e63590bd6cc7ad0871
