@@ -39,6 +39,6 @@ DIST VMware-workstation-e.x.p-99530.i386.tar.gz 333484911 RMD160 06461d5ee9916f2
 DIST VMware-workstation-e.x.p-99530.x86_64.tar.gz 351779246 RMD160 c84a3b3e6601d3e4cea2dfab0fac105e6deed601 SHA1 cd9e814a3927b4a0c6004acf5e18fe9f601e5bce SHA256 2757dc733fff52df5ae9e64e64ac6d419908fdf2d4c0ab55b017bd8c899e38a3
 DIST vmware-any-any-update115.tar.gz 493641 RMD160 56cabe56f70c01a22a7671e861cc5a2df19855c7 SHA1 ff9b6fdf6ca74495eb5f4822a1854fc91185377c SHA256 b1c14fa9514663b85c2efe8331407e71cce96e5a21a8b941fa570c960bbdcaa1
 EBUILD vmware-workstation-5.5.7.91707.ebuild 3247 RMD160 a619054c3c4318362f30e6ca10047b54c0dd6f6a SHA1 053e1cfd70208934063fbaab49581f7907381b5f SHA256 6470238fc76ab279dfb01ee2b13a4d32ff29d4f96aa9c5d094a09a786de4a214
-EBUILD vmware-workstation-6.0.4.93057.ebuild 4047 RMD160 a420052ca9d09100d9e1eb268d5a15d85b59f61b SHA1 0d51d7611d811cabaebcf4b4a6614a3edd7593ca SHA256 c70cc64a8bbdba6d0764cbfa692ba396e5475d9bf1eb7652e528ee63e5d14af6
-EBUILD vmware-workstation-6.5.0.91182.ebuild 4264 RMD160 2f746436c3188ba8903556b46e9f21804fa4a6e5 SHA1 46749a58cb5634436779593b5154b5b9cbb83f5b SHA256 9e18c5daae1e8fc32f71104180d05a61a375b26906cb220908527ada00c86f1f
-EBUILD vmware-workstation-6.5.0.99530.ebuild 4142 RMD160 c731415920b501232aa0baaf26a5a0cc7fa72c26 SHA1 6cbe205b89d96ad9e25555eb879f509dc3f8e55b SHA256 5d0778b89d48ddeea54ede6c3d595d5d9876a420a42c9a24c302b07a8f098a55
+EBUILD vmware-workstation-6.0.4.93057.ebuild 4046 RMD160 f7cb408391f6c736710b2986e9ad4e7d48cdac67 SHA1 68f5a14155533fcf325b7faf000266c87b1990ac SHA256 0f2573d7bced738eea8955538339b951d23f585c2b802f84cc13d0aadcab99d2
+EBUILD vmware-workstation-6.5.0.91182.ebuild 4263 RMD160 7bd1b23b4e659b763905308c3e268bee576df2ac SHA1 0f6392d4cd7bb57c06499ff8c2fbdaaf18ec4e7f SHA256 da4bbd38c9e3e6335d2839cbdcff5a00c9ba3bfdd35ff38206dd8ea9cbcbd1a9
+EBUILD vmware-workstation-6.5.0.99530.ebuild 4141 RMD160 e1bb2f495cd16fa983b7fba6b2d958846ecb6e22 SHA1 d613e0d91ad7261eb123b6cbae67486d02854906 SHA256 effab59ab12f19f335ed41083f06898a2f02336a9175bd9e7156b13c72a83538
