@@ -2,6 +2,12 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $ Id: $
 
+  21 Aug 2008; Mike Auty <ikelos@gentoo.org>
+  app-emulation/vmware-workstation/vmware-workstation-6.0.4.93057.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.5.0.91182.ebuild,
+  app-emulation/vmware-workstation/vmware-workstation-6.5.0.99530.ebuild:
+  Fix up hicolor icons symlink issue and manifest for open-vm-tools.
+
   20 Aug 2008; Mike Auty <ikelos@gentoo.org>
   app-emulation/open-vm-tools/open-vm-tools-0.0.20080808.109361.ebuild:
   Finally get the open-vm-tools unity dependencies right.
